--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-safe-area-context": "^4.7.4",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
